# contagion

./: .travis.yml  Cargo.toml  README.md  deny.toml
.github/workflows/: rust.yml  test-and-cargo-deny-and-coverage.yml
src/: classic.rs  config.rs  lib.rs  seen.rs  system.rs
src/batched/: config.rs  mod.rs  pending.rs  seen.rs
