[package]
name = "contagion"
version = "0.1.0"
authors = ["Ogier Bouvier <ars3nic@ars3nic.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop = { git = "https://github.com/Distributed-EPFL/drop", branch = "feature/refactor", features = [ "system" ] }
sieve = { git = "https://github.com/Distributed-EPFL/sieve" }
snafu = "0.6"
tokio = { version = "0.2", features = [ "sync" ] }
futures = "0.3"
serde = "1.0"
tracing = "0.1"

[dev-dependencies]
drop = { git = "https://github.com/Distributed-EPFL/drop", branch = "feature/refactor", features = [ "test" ] }
sieve = { git = "https://github.com/Distributed-EPFL/sieve" , features = [ "test" ] }
