[package]
name = "contagion"
version = "0.1.0"
authors = ["Ogier Bouvier <ogier@bouvier.family>"]
edition = "2018"
license = "AGPL-3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop = { git = "https://github.com/Distributed-EPFL/drop", branch = "feature/refactor", features = [ "system" ] }
sieve = { git = "https://github.com/Distributed-EPFL/sieve", branch = "batched" }
snafu = "0.6"
tokio = { version = "1", features = [ "sync" ] }
tokio-stream = "0.1"
futures = "0.3"
serde = "1.0"
tracing = "0.1"
derive_builder = "0.9"
postage = "0.4"
structopt = { version = "0.3", optional = true }

[dev-dependencies]
drop = { git = "https://github.com/Distributed-EPFL/drop", branch = "feature/refactor", features = [ "test" ] }
sieve = { git = "https://github.com/Distributed-EPFL/sieve", branch = "batched", features = [ "test" ] }
tokio = { version = "1", features = [ "macros" ] } 

[features]
default = []
cli = [ "structopt", "sieve/cli" ]
